--- a/nodejs/isoldry/views/includes/produits.jade
+++ b/nodejs/isoldry/views/includes/produits.jade
@@ -1,43 +1,166 @@
 h1 Nos produits
 hr
-p Les systèmes Dryvit sont le complément idéal pour les maisons neuves lorsque vous choisissez de construire sur une ossature en bois ou en métal. 
-p Si vous choisissez de construire votre nouvelle maison avec du béton, beton cellulaire ou en stuc, des couches de base de Dryvit et finitions (TAF) sont le choix parfait pour compléter vos murs extérieurs. 
-p Peu importe comment vous choisissez de construire votre maison, vous pouvez profiter de l'une quelconque des textures Dryvit de finition (voir liste ci-dessous les options de finition). 
-p Si vous rénovez votre maison, vous pourriez être en mesure de mettre notre système MD Sprint ou revêtements directement sur votre revêtement existant sans le retirer.
+div#produits_accordion
+  h2 
+    a(href='#') Systèmes
+  div
+    h3 
+      a(href="http://firma.hybrid.pl/dryvit_fr/?a=sys&b=22", target="_blank") Drysulation
+    div.liste_produits
+      p Dryvit Drysulation est un système d’isolation thermique extérieure (I. T. E.) avec enduit mince, constitué d’un panneau d’isolation en polystyrène expansé (PSE) collée sur le support, d’une couche de base armée, renforcé d’un treillis d’armature en fibres de verre, d’un revêtement de finition avec un enduit mince et d’une peinture silicone. Les revêtements de finition sont disponibles dans quatre textures et une large palette de couleurs. Système à base de composants minéraux.
+      div.center
+        img(src="img/produits/drysulation.png")
+    h3 
+      a(href="http://firma.hybrid.pl/dryvit_fr/?a=sys&b=21", target="_blank") Outsulation
+    div.liste_produits
+      p Dryvit Outsulation est un système d’isolation thermique extérieure (I.T.E.) avec enduit mince, constitué d’un panneau d’isolation en polystyrène expansé (PSE) collée sur le support, d’une couche de base armée, renforcé d’un treillis d’armature en fibres de verre et d’un revêtement de finition avec un enduit mince. Les revêtements de finition sont disponibles dans une large palette de textures et de couleurs
+      div.center
+        img(src="img/produits/outsulation.png")
+    h3 
+      a(href="http://firma.hybrid.pl/dryvit_fr/?a=sys&b=23", target="_blank") Roxsulation
+    div.liste_produits
+      p Dryvit Roxsulation SLK est un système d’isolation thermique extérieure (I.T.E.) avec enduit mince, constitué d’un panneau d’isolation en laine minérale collée/calé sur le support avec une colle minérale, puis fixé mécaniquement avec des chevilles agréées, d’une couche de base minérale armée, renforcé d’un treillis d’armature et d’un revêtement de finition au silicate (matériaux incombustibles) à base de verre potassique.
+      div.center
+        img(src="img/produits/roxsulation.png")
+    br
+    p Retrouvez l’ensemble des coloris dans notre 
+      strong
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=col&b=1", target="_blank") nuancier.
 
-h3  Ameristone ™
-p 100% acrylique à base Terminer avec Multi-couleur des agrégats de quartz
-  ul 
-    li Fiche de données
-    li Les instructions d'application
-    li FS  
-    li Les Couleurs
-    li Demande d'info
+  h2 
+   a(href='#') Finitions de façades
+  div
+    h3 Finitions acryliques
+    div.liste_produits
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=135", target="_blank") Freestyle PMR
+      p Revêtement de finition acrylique 100% à base de copolymères acryliques avec une texture lisse/taloché. Disponible en plus de 500 coloris.
 
-h3 Personnalisé Brick ™ Polymer 
-p Terminer l'architecture dans le regard de brique, pierre, ardoise et tuile pour les surfaces verticales
-  ul
-    li Brochure
-    li Terminer spécialité Brochure
-    li Fiche de données
-    li Les Spécifications - PDF
-    li Les Spécifications - DOC
-    li Les instructions d'application  
-    li FS
-    li Demande d'info
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=136", target="_blank") Sandblast PMR
+      p Revêtement de finition acrylique 100% à base de copolymères acryliques, granulation de 1,2 mm à texture fine. Disponible en plus de 500 coloris.
 
-h3 RMR Finitions
-p Aggregate texturé 100% acrylique à base de résistance de ramassage Dirt Finitions
-  ul
-    li Fiche de données
-    li Demande d'info
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=137", target="_blank") Sandpebble PMR
+      p Revêtement de finition acrylique 100% à base de copolymères acryliques, granulation de 1,6 mm à texture intermédiaire. Disponible en plus de 500 coloris.
 
-h3 Finitions extérieures et revêtements
-p Dryvit standard, finis spéciaux et élastomère, ainsi que les revêtements, offrent des avantages tels que peu d'entretien DPR (Résistance à la rétention de saleté) et PMR ™ (Résistance à la moisissure éprouvée).
-  ul
-    li Brochure
-    li Les Couleurs
-    li la littérature espagnole  
-    li Demande d'info
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=138", target="_blank") Quartputz PMR
+      p Revêtement de finition acrylique 100 % à base de copolymères acryliques, agrégats de 2,0 mm à texture irrégulière. Disponible en plus de 500 coloris.
 
-hr
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=139", target="_blank") Lymestone PMR
+      p Revêtement de finition acrylique 100 % à base de copolymères acryliques, granulation de 0,5 mm à texture fine/taloché. Disponible en plus de 500 coloris.
+
+    h3 Finitions spécialisées
+    div.liste_produits
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=85", target="_blank") Stonemist
+      p Le revêtement de finition Stonemist est un mélange d’agrégats de quartz colorés par céramiques pris dans un liant 100% acrylique. Disponible en 10 coloris, ce produit prêt à l’emploi garantit des résultats exceptionnels. Il est perméable à la vapeur et résistant aux intempéries.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=86", target="_blank") Ameristone
+      p Le revêtement Ameristone est un mélange d'agrégats naturels de formes et de coloris variés qui produit une finition évoquant la pierre naturelle. Les agrégats sont pris dans un liant 100% acrylique qui confère au revêtement final des propriétés de protection exceptionnelles.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=87", target="_blank") Ameristone T
+      p Le revêtement Ameristone T est un mélange d'agrégats naturels et de mica de formes et de coloris variés qui produit une finition évoquant la pierre naturelle (granit, basalte). Les agrégats sont pris dans un liant 100 % acrylique qui confère au revêtement final des propriétés de protection exceptionnelles.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=62", target="_blank") Ultra-Tex PMR
+      p Ultra-Tex™ est un revêtement Dryvit innovant conçu pour les surfaces intérieures et extérieures.
+
+  h2 
+    a(href='#') Mortiers-colles
+  div
+    h3 Minérales
+    div.liste_produits
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=46", target="_blank") Dryhesive Plus
+      p Mélange sec, mortier-colle modifié par résines polymères.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=54", target="_blank") Primus M
+      p Colle à flexibilité et adhérence renforcées pour treillis de renfort.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=103", target="_blank") Flatmur
+      p Platre de lissage et de renovation 
+
+    h3 Polymères
+    div.liste_produits
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=50", target="_blank") Primus
+      p Adhésif acrylique destiné ⁄ incorporer les treillis d'armature.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=53", target="_blank") Dryflex
+      p Adhesif acrylique hautement resistant à l'humidité.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=56", target="_blank") Adeps
+      p Adhésif non cimentaire pour polystyrène expansé.
+
+  h2
+    a(href='#') Peintures et primaires
+  div
+    h3 Acryliques
+    div.liste_produits
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=89", target="_blank") Demandit
+      p Peinture acrylique 100% à base de polymères.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=92", target="_blank") Primax
+      p Primer/Fixateur
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=97", target="_blank") Color Prime
+      p Primaires acryliques pigmentés pour revêtements de finition Dryvit.
+
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=98", target="_blank") Color Prime M
+      p Primaires acryliques pigmentés pour revêtements de finition Dryvit.
+
+    h3 Siloxanes
+    div.liste_produits
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=88", target="_blank") Silstar
+      p Peinture silicone pour l’extérieur.
+
+    h3 Silicates
+    div.liste_produits
+      h4 
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=91", target="_blank") Colorsil
+      p Peinture pour façade à base de silicate.
+
+  h2 
+    a(href='#') Isolants
+  div
+    div.liste_produits
+      h4 
+        a(href="http://guide-solutions.rockwool.fr/produits--systemes/toiture-comble-mur-cloison-plancher-sol--cheminee/ecorock.aspx", target="_blank") Laine de roche
+      h4 
+        a(href="http://www.isobox-isolation.fr/index.php/isolation-exterieure/pose-collee-ou-chevillee/facadbox-38", target="_blank") PSE Standard TH38
+      h4 
+        a(href="http://www.isobox-isolation.fr/index.php/isolation-exterieure/pose-collee-ou-chevillee/facadbox-32", target="_blank") PSE Graphite TH32
+      h4 
+        a(href="http://www.isobox-isolation.fr/documentations/Doc-facade.pdf", target="_blank") Autres
+
+  h2
+    a(href='#') Accessoires
+  div
+    div.liste_produits
+      h4 
+        a(href="http://firma.hybrid.pl/dryvit_fr/?a=prd&b=111", target="_blank") Treillis d'armature
+      h4 
+        a(href="http://firma.hybrid.pl/File/accessoire%20profiles%281%29.pdf", target="_blank") Profiles
+      h4 
+        a(href="http://firma.hybrid.pl/File/accessoire%20chevilles.pdf", target="_blank") Chevilles Fixation mécanique
+      h4
+        a(href="http://www.iso-chemie.de/fr/material/fiche-technique/ISO-BLOCO-HF.pdf", target="_blank") Bande d'expansion
+      h4 
+        a(href="http://eu.dosteba.com/downloads/php/bin/dateien/index.php?fm_dir=01%20Produkteflyer%252FFranz%25F6sisch", target="_blank") Support de fixations Dosteba
+
+  hr
