--- a/nodejs/isoldry/views/includes/references.jade
+++ b/nodejs/isoldry/views/includes/references.jade
@@ -1,59 +1,89 @@
 h1 Nos références
 hr
-//img(src="http://placehold.it/667x500")
-
-div#container
-  div#slides_all
-    div.slides_container
-      div
-        img(src="img/refs/ilots-corot/main.jpg")
-        div.caption
-          p Ilôts Corot : Dry Solution - Finition Sampable 1.6
-      div
-        img(src="img/refs/grain-orge/main.jpg")
-        div.caption
-          p Site Grain d'Orge : Dry Solution - Finition Sandblast 1.2 - Plaquettes de briques
-      div
-        img(src="img/refs/carre-modes/main.jpg")
-        div.caption
-          p Carré des modes : Finition Sampable 1.6 - Plaquettes de briques
-
   //
-    span#go-ilot go ilot
-    br
-    br
-    span#go-grain go grain
-    br
-    br
-    span#go-rbx go rbx
+  div.ad-gallery
+    div.ad-image-wrapper
+    div.ad-control
+    div.ad-nav
+      div.ad-thumbs
+        ul.ad-thumbs-list
 
-    h2#nom Site Grain d'Orge
-    dl.dl-horizontal
-      dt Lieu
-      dd#lieu Ronchin
-      dt M. d'oeuvre
-      dd#moeu SIA Habitat
-      dt M. d'ouvrage
-      dd#mouv DFA Architectes
-      dt Surface
-      dd#surface 6000m²
-      dt Systèmes 
-      dd#systemes Dry Solution, Finition Sandblast 1.2, Plaquettes de briques
+div#description
+  div#chantier_title
+    span#nom Site Grain d'Orge
+  dl.dl-horizontal#feeds
+    dt Lieu
+    dd#lieu Ronchin
+    dt M. d'oeuvre
+    dd#moeu SIA Habitat
+    dt M. d'ouvrage
+    dd#mouv DFA Architectes
+    dt Surface
+    dd#surface 6000m²
+    dt Systèmes 
+    dd#systemes Dry Solution, Finition Sandblast 1.2, Plaquettes de briques
 
-    div#example
-      div#slides
-        div.slides_container
-          a(href='#') 
-            img(src="img/refs/grain-orge/1.jpg", width="570", height="270")
-          a(href='#') 
-            img(src="img/refs/grain-orge/2.jpg")
-          a(href='#') 
-            img(src="img/refs/grain-orge/3.jpg")
-          a(href='#') 
-            img(src="img/refs/grain-orge/4.jpg")
-        a.prev(href='#')
-          img(src="img/arrow-prev.png") 
-        a.next(href='#')
-          img(src="img/arrow-next.png")
+div#sliders
+  div#notice 
+    p Pour plus de précisions sur un chantier, cliquez sur le titre.
+  div.slider-wrapper.theme-default#references-wrapper
+    div.ribbon
+    div.nivoSlider#references-slider
+
+  div.sliders-chantier
+    div.slider-wrapper.theme-default#grain-orge-wrapper
+      div.ribbon
+      div.nivoSlider#grain-orge-slider
+    div.slider-wrapper.theme-default#carre-modes-wrapper
+      div.ribbon
+      div.nivoSlider#carre-modes-slider
+    div.slider-wrapper.theme-default#ilots-corot-wrapper
+      div.ribbon
+      div.nivoSlider#ilots-corot-slider
+    div.slider-wrapper.theme-default#marine-harvest-wrapper
+      div.ribbon
+      div.nivoSlider#marine-harvest-slider
+
+    //
+      div#container
+        div#slides_all
+          div.slides_container
+            div
+              img(src="img/refs/ilots-corot/main.jpg")
+              div.caption
+                p Ilôts Corot : Dry Solution - Finition Sampable 1.6
+            div
+              img(src="img/refs/grain-orge/main.jpg")
+              div.caption
+                p Site Grain d'Orge : Dry Solution - Finition Sandblast 1.2 - Plaquettes de briques
+            div
+              img(src="img/refs/carre-modes/main.jpg")
+              div.caption
+            p Carré des modes : Finition Sampable 1.6 - Plaquettes de briques
+    //
+      span#go-ilot go ilot
+      br
+      br
+      span#go-grain go grain
+      br
+      br
+      span#go-rbx go rbx
+
+
+      div#example
+        div#slides
+          div.slides_container
+            a(href='#') 
+              img(src="img/refs/grain-orge/1.jpg", width="570", height="270")
+            a(href='#') 
+              img(src="img/refs/grain-orge/2.jpg")
+            a(href='#') 
+              img(src="img/refs/grain-orge/3.jpg")
+            a(href='#') 
+              img(src="img/refs/grain-orge/4.jpg")
+          a.prev(href='#')
+            img(src="img/arrow-prev.png") 
+          a.next(href='#')
+            img(src="img/arrow-next.png")
 
 hr
