--- a/nodejs/isoldry/public/style/style2.css
+++ b/nodejs/isoldry/public/style/style2.css
@@ -1,9 +1,9 @@
 body {
-  background-image: url("../img/texture.png"); 
+  background-image: url("../img/texture3.jpg"); 
 }
 
-a, a.visited {
-  color: #FFFFFF;
+
+a, a:visited {
   text-decoration: none;
 }
 
@@ -11,12 +11,6 @@ footer {
   text-align: center;
 }
 
-h1 {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-weight: normal;
-  font-size: 35px;
-  color: #616166;
-}
 p {
   font-size: 16px;
 }
@@ -52,7 +46,7 @@ p {
   background-color: #616166;
   padding-right:20px;
   padding-top:18px;
-  padding-bottom:14px;
+  padding-bottom:10px;
   margin-top:-5px;
   text-align:right;
 }
@@ -66,201 +60,99 @@ p {
   padding-right: 12px;
   margin-right: 4px;
   margin-left: 4px;
-  color: #FFFFFF
+}
+
+.link a {
+  color: #FFFFFF;
+}
+
+.social {
+  margin-bottom: 8px;
+  padding-left: 8px;
 }
 
 .selected_link {
   background-color:#97ab8e;
-  color: #616166;
 }
 
 .invisible_content {
   display: none;
 }
 
-
-
-
-
-
-/*
-  References
-*/
-
-#container {
-  width:580px;
-  padding:10px;
-  margin:0 auto;
-  position:relative;
-  z-index:0;
+.stretch {
+  margin-left: 80px;
+  width: 610px;
 }
 
-#example {
-  width:600px;
-  height:350px;
-  position:relative;
+.right {
+  text-align: right;
 }
 
-#frame {
+h1 {
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-weight: normal;
+  font-size: 35px;
+  color: #616166;
+}
+
+/* References */
+#sliders {
+  width: 600px;
+  padding-left: 120px;
+}
+.nivoSlider {
+  position:relative;
+  background:url("img/loading.gif") no-repeat 50% 50%;
+}
+.nivoSlider img {
   position:absolute;
-  z-index:0;
-  width:739px;
-  height:341px;
-  top:-3px;
-  left:-80px;
-}
-
-/*
- *  Slideshow
- *  */
-
-#slides {
-  position:absolute;
-  top:15px;
-  left:4px;
-  z-index:100;
-}
-
-/*
- *  Slides container
- *    Important:
- *      Set the width of your slides container
- *        Set to display none, prevents content flash
- *        */
-
-.slides_container {
-  width:570px;
-  overflow:hidden;
-  position:relative;
+  top:0px;
+  left:0px;
   display:none;
 }
-
-/*
- *  Each slide
-*    Important:
-*      Set the width of your slides
-*        If height not specified height will be set by the slide content
-*          Set to display block
-*          */
-
-.slides_container a {
-  width:570px;
-  height:270px;
+.nivoSlider a {
+  border:0;
   display:block;
 }
-.slides_container div {
-  width:570px;
-  height:270px;
-  display:block;
+#chantier_title {
+  padding: 8px;
+  padding-right: 30px;
+  margin-bottom: 8px;
+  margin-left: 14px;
+  border: 1px #AAAAAA solid;
+  background-color: #E8E8E8;
+  text-align: right;
+  font-weight: normal;
+  font-size: 20px;
+}
+#description {
+  padding-left: 100px;
+  width: 620px;
+}
+.chantier-caption {
+  text-decoration: none;
 }
 
-.slides_container a img {
-  display:block;
+/* Produits */
+#produits {
+  height: 1500px;
+}
+#produits_accordion {
+  height: 380px;
+}
+.center {
+  text-align: center;
+}
+h3 {
+  font-size: 18px;
+  border-bottom: 1px dotted black;
+  font-weight: normal;
+  text-align: right;
+  padding-right: 20px;
 }
 
-/*
-*  Next/prev buttons
-*  */
-
-#slides .next,#slides .prev {
-  position:absolute;
-  top:107px;
-  left:-39px;
-  width:24px;
-  height:43px;
-  display:block;
-  z-index:101;
+.liste_produits {
+  padding-left: 30px;
+  margin-bottom: 15px;
+  margin-top: 20px;
 }
-
-#slides .next {
-  left:585px;
-}
-
-/*
-*  Pagination
-*  */
-/*
-.pagination {
-  margin:26px auto 0;
-  width:100px;
-}
-
-.pagination li {
-  float:left;
-  margin:0 1px;
-  list-style:none;
-}
-
-.pagination li a {
-  display:block;
-  width:12px;
-  height:0;
-  padding-top:12px;
-  background-image:url(../img/pagination.png);
-  background-position:0 0;
-  float:left;
-  overflow:hidden;
-}
-
-.pagination li.current a {
-  background-position:0 -12px;
-}
-*/
-
-/*
-  
-.slides_container {
-  width:667px;
-  height:400px;
-}
-.slides_container div {
-  width:667px;
-  height:370px;
-  display:block;
-}*/
-.caption {
-    z-index:500;
-    position:absolute;
-    bottom:-365px;
-    left:0;
-    height:10px;
-    padding:10px 20px 0 20px;
-    background:#000;
-    background:rgba(0,0,0,.5);
-    width:267px;
-    font-size:1.3em;
-    line-height:1.33;
-    color:#fff;
-    border-top:1px solid #000;
-    text-shadow:none;
-    text-align:left;
-}
-/*
-.pagination {
-    margin:26px auto 0;
-      width:100px;
-    }
-
-    .pagination li {
-        float:left;
-          margin:0 1px;
-            list-style:none;
-          }
-
-          .pagination li a {
-              display:block;
-                width:12px;
-                  height:0;
-                    padding-top:12px;
-                      background-image:url(../img/pagination.png);
-                        background-position:0 0;
-                          float:left;
-                            overflow:hidden;
-                          }
-
-                          .pagination li.current a {
-                              background-position:0 -12px;
-                            }
-
-
-*/
