--- a/nodejs/isoldry/views/includes/contact.jade
+++ b/nodejs/isoldry/views/includes/contact.jade
@@ -2,12 +2,14 @@ h1 Nous contacter
 hr
 dl.dl-horizontal
   dt Email
-  dd contact@isoldry.com
+  dd
+    a(href="mailto:contact@isoldry.com") contact@isoldry.com
   dt Tel.
   dd 03 61 76 18 00
   dt Fax
   dd 03 20 00 81 40
   dt Adresse
   dd Isoldry <br /> 2ème Ave 8ème Rue Port Fluvial <br /> 59000 LILLE
-p#map 
+div.center
+  p#map 
 hr
